# service_of_import

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_report_checksum.py
app/: __init__.py  config.py  db.py  dependencies.py  errors.py  logging.py  main.py  models.py  schemas.py  worker.py
app/api/: errors.py  health.py  inventory.py  reports.py
app/services/: __init__.py  apply_report.py  csv_validation.py  read_api.py  report_processing.py  reports.py  storage.py
docs/: architecture.md  implementation-plan.md  test-assignment.docx
examples/csv/: invalid_duplicate_pair.csv  invalid_empty_value.csv  invalid_header_only.csv  invalid_malformed.csv  invalid_missing_column.csv  invalid_negative_quantity.csv  invalid_non_integer_quantity.csv  valid_basic.csv  valid_explicit_zero.csv  valid_multiple_warehouses.csv  valid_quoted.csv  valid_snapshot_initial.csv  valid_snapshot_update.csv  valid_utf8_bom.csv
scripts/: smoke.sh
tests/: conftest.py  fakes.py  test_health.py
tests/integration/: conftest.py  test_apply_report.py  test_health_dependencies.py  test_migration_chain.py  test_read_api.py  test_reports_api.py  test_schema.py  test_storage_minio.py  test_worker_validation.py
tests/unit/: __init__.py  test_apply_counters.py  test_config.py  test_csv_validation.py  test_storage.py  test_worker.py
